# hyprdashboard

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  main.rs  message.rs  state.rs  ui.rs
