[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
dirs = "6.0.0"
iced = { version = "0.12", features = ["lazy", "image", "svg"] }
rust-ini = "0.18"
state = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
once_cell = "1.21.3"
widget = "0.0.0"

[dev-dependencies]
tempfile = "3"
